<resources>
    <string name="app_name">CigCount</string>
    <!-- MAIN MENU -->
    <string name="action_home">Home</string>
    <string name="action_add_pack">Add Pack</string>
    <string name="action_choose_pack">Manage Packs</string>
    <string name="action_stats">Stats</string>
    <string name="action_settings">Settings</string>
    <!-- PACKS MENU -->
    <string name="action_delete_pack">Delete</string>
    <!-- MAIN ACTIVITY -->
    <string name="text_main_pack">Current Pack : </string>
    <string name="button_main_change_pack">Choose a pack</string>
    <string name="button_main_add_cig">Add a cigarette</string>
    <string name="text_main_cig_smoked">Cigarettes smoked</string>
    <!-- CREATE PACK ACTIVITY -->
    <string name="text_brand">Brand</string>
    <string name="text_cig_number">Cigarettes number</string>
    <string name="text_price">Price</string>
    <string name="text_tobacco_rate">Tobacco rate (as a %)</string>
    <string name="text_paper_rate">Paper rate (as a %)</string>
    <string name="text_agents_rate">Agents rate (as a %)</string>
    <string name="button_add_pack">Add Pack</string>
    <string name="same_brand">This brand already exists</string>
    <string name="not_filled">All fields must be filled</string>
    <!-- SETTINGS ACTIVITY -->
    <string name="button_settings_reset_cigs">Reset Cigarettes</string>
    <string name="button_settings_reset_packs">Reset Packs</string>
    <string name="button_settings_reset_data">Reset all data</string>
    <!-- CHANGE FRAGMENT -->
    <string name="change_pack_fragment_title">Choose a Pack</string>
    <string name="change_pack_fragment_add">Add a Pack</string>
    <string name="change_pack_fragment_cancel">Cancel</string>
    <string name="change_pack_fragment_empty">Add a Pack first !</string>
    <!-- EDIT FRAGMENT -->
    <string name="edit_pack_fragment_edit">Edit</string>
    <string name="edit_pack_fragment_cancel">Cancel</string>
    <!-- DELETE FRAGMENT -->
    <string name="delete_pack_fragment_message">Are you sure ?</string>
    <string name="delete_pack_fragment_confirm">Yes !</string>
    <string name="delete_pack_fragment_cancel">Hum, no</string>
    <!-- STATS ACTIVITY -->
    <string name="all_packs_text">All Packs</string>
    <string name="cig_smoked_total">Cigarettes smoked : </string>
    <string name="life_loss_total">Minutes of life lost : </string>
    <string name="money_loss_total">Money spent : </string>
    <string name="tobacco_smoked_total">Tobacco smoked : </string>
    <string name="paper_burnt_total">Paper burnt : </string>
    <string name="agents_smoked_total">Agents smoked : </string>
    <string name="no_data">No smoked cigarettes for this Pack !</string>
</resources>
