<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="upmc.cigcount.SettingsActivity">

    <Button android:id="@+id/butResetCigs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_settings_reset_cigs"
        android:layout_gravity="center_horizontal"
        android:onClick="resetCigs" />

    <Button android:id="@+id/butResetPacks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_settings_reset_packs"
        android:layout_gravity="center_horizontal"
        android:onClick="resetPacks" />

    <Button android:id="@+id/butResetData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_settings_reset_data"
        android:layout_gravity="center_horizontal"
        android:onClick="resetData" />

</LinearLayout>
